--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,154 @@ body{
 
 .header{
   height: 95vh;
+  position: relative;
   background-image: linear-gradient(
     to right bottom,
-   rgba(126, 213, 111, 0.8),
-   rgba(40, 130, 180, 0.8) ), 
+   rgba(126, 213, 111, 0.5),
+   rgba(40, 131, 180, 0.9) ), 
   url('../img/hero.jpg');
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
   /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); triangel*/
+}
+
+.logo-box{
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.logo{
+  height: 35px;
+}
+
+.header-content{
+  position: absolute;
+  text-align: center;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  backface-visibility: hidden; 
+  
+}
+.heading-primary{
+  color: #fff;
+  margin-bottom: 3rem;
+  text-transform: uppercase;
+}
+.heading-primary-main{
+  display: block;
+  font-size: 60px;
+  font-weight: 600;
+  letter-spacing: 2rem;
+  animation: moveInLeft 1s ease-out;
+}
+.heading-primary-sub{
+  display: block;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: .5rem;
+  animation: moveInRight 1s ease-out;
+
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); 
+  }
+  80% {
+    /* transform: translateX(1rem); */
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0); 
+  }
+}
+
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); 
+  }
+  80% {
+    /* transform: translateX(1rem); */
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0); 
+  }
+}
+
+
+  
+  @keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(12rem); 
+  }
+  80% {
+    /* transform: translateX(1rem); */
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0); 
+  }
+}
+
+
+.btn:visited,
+.btn:link{
+  display: inline-block;
+  position: relative;
+  text-transform: capitalize;
+  text-decoration: none;
+  padding:1rem 2rem ;
+  transition: all .2s;
+  border-radius: 100px;
+}
+
+.btn:hover{
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
+.btn:active{
+  /* clicked */
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+.btn-white{
+  background-color: #fff;
+  color: #777;
+}
+
+
+.btn::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 100px;
+  z-index: -1;
+  transition: all .4s;
+
+}
+
+.btn-white::after{
+  background-color: #fff;
+}
+
+.btn:hover::after{
+  opacity: 0;
+  transform: scaleX(1.4) scaleY(1.6);
+}
+
+.animated-btn{
+  animation: moveInBottom .3s ease-out .75s;
+  animation-fill-mode: backwards;
 }
