--- a/css/style2.css
+++ b/css/style2.css
@@ -61,6 +61,7 @@
       animation-duration: 1s;
       animation-timing-function: ease-out;
       /*
+          anmimation: moveInLeft 3s eas-out; short-hamd for animation
           animation-delay: 3s;
           animation-iteration-count: 3;
           */ }
