--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,31 @@
   Dark green  : #28b485
 */
 
-*{
+
+  /*================= global css settings =================*/
+
+*,
+*::after,
+*::before{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+html{
+  /* 62.5% of 16px */
+  font-size: 62.5%;
 }
 
 body{
-  font-size: 1rem;
+  box-sizing: border-box;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.7;
   color: #777;
-  padding: 2rem;
+  padding: 3rem;
 }
 
+/*================= Header styles =================*/
 .header{
   height: 95vh;
   position: relative;
@@ -36,12 +46,12 @@ body{
 
 .logo-box{
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
 }
 
 .logo{
-  height: 35px;
+  height: 3.5rem;
 }
 
 .header-content{
@@ -55,68 +65,23 @@ body{
 }
 .heading-primary{
   color: #fff;
-  margin-bottom: 3rem;
+  margin-bottom: 6rem;
   text-transform: uppercase;
 }
 .heading-primary-main{
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 600;
-  letter-spacing: 2rem;
+  letter-spacing: 3.5rem;
   animation: moveInLeft 1s ease-out;
 }
 .heading-primary-sub{
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
-  letter-spacing: .5rem;
+  letter-spacing: 1.5rem;
   animation: moveInRight 1s ease-out;
 
-}
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem); 
-  }
-  80% {
-    /* transform: translateX(1rem); */
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0); 
-  }
-}
-
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem); 
-  }
-  80% {
-    /* transform: translateX(1rem); */
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0); 
-  }
-}
-
-
-  
-  @keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(12rem); 
-  }
-  80% {
-    /* transform: translateX(1rem); */
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0); 
-  }
 }
 
 
@@ -126,19 +91,20 @@ body{
   position: relative;
   text-transform: capitalize;
   text-decoration: none;
-  padding:1rem 2rem ;
+  font-size: 1.6rem;
+  padding:1.5rem 4rem ;
   transition: all .2s;
-  border-radius: 100px;
+  border-radius: 10rem;
 }
 
 .btn:hover{
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
 }
 .btn:active{
   /* clicked */
   transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.3);
 }
 .btn-white{
   background-color: #fff;
@@ -154,7 +120,7 @@ body{
   display: inline-block;
   width: 100%;
   height: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   z-index: -1;
   transition: all .4s;
 
@@ -172,4 +138,48 @@ body{
 .animated-btn{
   animation: moveInBottom .3s ease-out .75s;
   animation-fill-mode: backwards;
+}
+
+
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); 
+  }
+  80% {
+    transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0); 
+  }
+}
+
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); 
+  }
+  80% {
+    transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0); 
+  }
+}
+
+
+  
+  @keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); 
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0); 
+  }
 }
