--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-/* 
-      *--- colors ---*
-  lightgreen: #7ed56f
-  medium green: #55c57a
-  Dark green  : #28b485
-*/
+/* all low level basics, such as hmtl , css restes, styles for
+ body and HTML element selectors, global * 
+ *this files should be _partial, so we can import into main.scss
+ *all partial files have underscode _
+ */
 /*================= global css settings =================*/
 *,
 *::after,
@@ -13,108 +12,11 @@
   box-sizing: inherit; }
 
 html {
-  /* 62.5% of 16px */
+  /* 62.5% of 16px = 1rem=10px*/
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box;
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
-
-/*================= Header styles =================*/
-.header {
-  height: 95vh;
-  position: relative;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.9)), url("../img/hero.jpg");
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
-  /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); triangel*/ }
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem; }
-
-.header__logo {
-  height: 3.5rem; }
-
-.header__content {
-  position: absolute;
-  text-align: center;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  backface-visibility: hidden; }
-
-.heading-primary {
-  color: #fff;
-  margin-bottom: 6rem;
-  text-transform: uppercase; }
-
-.heading-primary--main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 600;
-  letter-spacing: 3.5rem;
-  animation: moveInLeft 1s ease-out; }
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 400;
-  letter-spacing: 1.5rem;
-  animation: moveInRight 1s ease-out; }
-
-.btn:visited,
-.btn:link {
-  display: inline-block;
-  position: relative;
-  text-transform: capitalize;
-  text-decoration: none;
-  font-size: 1.6rem;
-  padding: 1.5rem 4rem;
-  transition: all .2s;
-  border-radius: 10rem; }
-
-.btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3); }
-
-.btn:active {
-  /* clicked */
-  transform: translateY(-1px);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3); }
-
-.btn--white {
-  background-color: #fff;
-  color: #777; }
-
-.btn::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  border-radius: 10rem;
-  z-index: -1;
-  transition: all .4s; }
-
-.btn--white::after {
-  background-color: #fff; }
-
-.btn:hover::after {
-  opacity: 0;
-  transform: scaleX(1.4) scaleY(1.6); }
-
-.animated--btn {
-  animation: moveInBottom .3s ease-out .75s;
-  animation-fill-mode: backwards; }
+  box-sizing: border-box; }
 
 @keyframes moveInLeft {
   0% {
@@ -143,3 +45,93 @@ body {
   100% {
     opacity: 1;
     transform: translate(0); } }
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777;
+  padding: 3rem; }
+
+.heading-primary {
+  color: #fff;
+  margin-bottom: 6rem;
+  text-transform: uppercase; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 600;
+    letter-spacing: 3.5rem;
+    animation: moveInLeft 1s ease-out; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 400;
+    letter-spacing: 1.5rem;
+    animation: moveInRight 1s ease-out; }
+
+.btn:visited, .btn:link {
+  display: inline-block;
+  position: relative;
+  text-transform: capitalize;
+  text-decoration: none;
+  font-size: 1.6rem;
+  padding: 1.5rem 4rem;
+  transition: all .2s;
+  border-radius: 10rem; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3); }
+  .btn:hover::after {
+    opacity: 0;
+    transform: scaleX(1.4) scaleY(1.6); }
+
+.btn:active {
+  /* clicked */
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3); }
+
+.btn--white {
+  background-color: #fff;
+  color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
+
+.btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 10rem;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--animated {
+  animation: moveInBottom .3s ease-out .75s;
+  animation-fill-mode: backwards; }
+
+.header {
+  height: 95vh;
+  position: relative;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.9)), url("../img/hero.jpg");
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
+  /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); triangel*/ }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__content {
+    position: absolute;
+    text-align: center;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    backface-visibility: hidden; }
