About section complete

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,6 +1,16 @@
+// colors
 $color-primary:#55c57a;
 $color-primary-light:#7ed56f;
 $color-primary-dark:#28b485;
 $color-dark-grey:#777;
+$color-light-grey-1:#f7f7f7;
 $color-black:#000;
 $color-white:#fff;
+
+// Font
+$default-font-size:1.6rem;
+
+// grids
+$grid-width:100rem;
+$vertical-space:8rem;
+$horizontal-space:6rem;
