--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,25 @@
     padding: 25rem 0;
     margin-top: -20vh;
 }
+
+.section-features{
+    padding: 20rem 0;
+    background-image: linear-gradient(
+      to right bottom,
+     rgba($color-primary-light, 0.8),
+     rgba($color-primary-dark, 0.9) ),
+    url('/img/nat-4.jpg');
+    background-size: cover;
+    margin-top: -10rem;
+    transform: skewY(-8deg);
+    & > *{
+        transform: skewY(8deg);
+    }
+}
+
+.section-tours{
+    background-color: $color-light-grey-1;
+    padding: 25rem 0 50rem 0;
+    margin-top: -10rem;
+
+}
