tours section complete

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -8,6 +8,7 @@ $color-tertiary-light:#2998ff;
 $color-tertiary-dark:#5643fa;
 $color-dark-grey:#777;
 $color-light-grey-1:#f7f7f7;
+$color-light-grey-2:#eee;
 $color-black:#000;
 $color-white:#fff;
 
