--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,56 +1,63 @@
 .btn{
-&:visited,
-&:link{
-    display: inline-block;
-    position: relative;
-    text-transform: capitalize;
-    text-decoration: none;
-    font-size: $default-font-size;
-    padding:1.5rem 4rem ;
-    transition: all .2s;
-    border-radius: 10rem;
-}
-
-&:hover{
-    transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.3);
-    &::after{
-    opacity: 0;
-    transform: scaleX(1.4) scaleY(1.6);
+    &:visited,
+    &:link{
+        display: inline-block;
+        position: relative;
+        text-transform: capitalize;
+        text-decoration: none;
+        font-size: $default-font-size;
+        padding:1.5rem 4rem ;
+        transition: all .2s;
+        border-radius: 10rem;
     }
-}
 
-&:active{
-    /* clicked */
-    transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba($color-black, 0.3);
-}
-
-&--white{
-    background-color: $color-white;
-    color: $color-dark-grey;
-    &::after{
-    background-color: $color-white;
+    &:hover{
+        transform: translateY(-3px);
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.3);
+        &::after{
+        opacity: 0;
+        transform: scaleX(1.4) scaleY(1.6);
+        }
     }
-}
 
-&::after{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-radius: 10rem;
-    z-index: -1;
-    transition: all .4s;
-}
+    &:active{
+        /* clicked */
+        transform: translateY(-1px);
+        box-shadow: 0 .5rem 1rem rgba($color-black, 0.3);
+    }
 
-&--animated{
-    animation: moveInBottom .3s ease-out .75s;
-    animation-fill-mode: backwards;
-}
+    &--white{
+        background-color: $color-white;
+        color: $color-dark-grey;
+        &::after{
+        background-color: $color-white;
+        }
+    }
+    &--green{
+        background-color: $color-primary;
+        color: $color-white;
+        &::after{
+        background-color: $color-primary;
+        }
+    }
+
+    &::after{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        border-radius: 10rem;
+        z-index: -1;
+        transition: all .4s;
+    }
+
+    &--animated{
+        animation: moveInBottom .3s ease-out .75s;
+        animation-fill-mode: backwards;
+    }
 }
 
 .btn-text{
