--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,15 +1,17 @@
 .card{
+    // Rotating functionality
     perspective:150rem;
     -moz-perspective: 150rem ;
-    height: 45rem;
+    height: 52rem;
     position: relative;
+    cursor: pointer;
     &__side{
         position: absolute;
         top: 0;
         left: 0;
         border-radius: .3rem;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-        height: 45rem;
+        height: 52rem;
         width: 100%;
         backface-visibility: hidden;
         transition: all .8s;
@@ -21,6 +23,12 @@
             &-1{
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark)
             }
+            &-2{
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark)
+            }
+            &-3{
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark)
+            }
         }
     }
     
@@ -31,4 +39,106 @@
     &:hover &__side--back{
         transform: rotateY(0);
     }
+    &__picture{
+        background-size: cover;
+        height: 20rem;
+        background-blend-mode: screen;
+        overflow: hidden;
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        border-top-left-radius: .3rem;
+        border-top-right-radius: .3rem;
+        &--1{
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
+            url(/img/nat-5.jpg);
+        }
+        &--2{
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),
+            url(/img/nat-6.jpg);
+        }
+        &--3{
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),
+            url(/img/nat-7.jpg);
+        }
+    }
+
+    &__heading{
+        color: $color-white;
+        font-size: 2.5rem;
+        font-weight: 300;
+        position:absolute;
+        right:2rem;
+        top:12rem;
+        text-transform: capitalize;
+        text-align: right;
+        width: 70%;
+    }
+
+    &__heading-span{
+        padding: 1rem 1.5rem;
+        // margin: 3rem;
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
+        &-1{
+            background-image: linear-gradient(
+                to right bottom, 
+                rgba($color-secondary-light, .85),
+                rgba($color-secondary-dark, .85)
+            );
+        }
+        &-2{
+            background-image: linear-gradient(
+                to right bottom, 
+                rgba($color-primary-light, .85),
+                rgba($color-primary-dark, .85)
+            );
+        }
+        &-3{
+            background-image: linear-gradient(
+                to right bottom, 
+                rgba($color-tertiary-light, .85),
+                rgba($color-tertiary-dark, .85)
+            );
+        }
+    }
+    &__details{
+        padding: 3rem;
+        ul{
+            list-style: none;
+            width: 80%;
+            margin: 0 auto;
+            li{
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1rem;
+                text-transform: capitalize;
+                &:not(:last-child){
+                    border-bottom: 1px solid $color-light-grey-2;
+                }
+            }
+        }
+    }
+    &__cta{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        width: 90%;
+    }
+    &__price-box{
+        color: $color-white;
+        text-align: center;
+        margin-bottom: 8rem;
+
+    }
+    &__price-title{
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+    &__price-value{
+        font-size: 6rem;
+        font-weight: 100;
+    }
+
 }
