--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,6 +8,7 @@
     url('../img/hero.jpg');
     background-size: cover;
     background-position: top;
+    -webkit-clip-path:polygon(0 0, 100% 0, 100% 70vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
     /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); triangel*/
     &__logo-box{
