--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -64,10 +64,11 @@
     &:link,
     &:visited{
         color:$color-primary;
+        font-size: $default-font-size;
         text-decoration: none;
         display: inline-block;
-        border-bottom: .1rem solid $color-primary;
-        padding: .3rem;
+        border-bottom: 1px solid $color-primary;
+        padding: .4rem;
         transition: all .2s;
     }
 
