--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,6 +21,12 @@
 
 .section-tours{
     background-color: $color-light-grey-1;
-    padding: 25rem 0 15rem 0;
+    padding: 25rem 0 10rem 0;
     margin-top: -10rem;
+}
+
+.section-stories{
+    padding: 15rem 0;
+    position: relative;
+    backface-visibility: hidden;
 }
