L16-19 - Complete the Booking and footer section

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -7,6 +7,8 @@ $color-secondary-dark:#ff7730;
 $color-tertiary-light:#2998ff;
 $color-tertiary-dark:#5643fa;
 $color-dark-grey:#777;
+$color-dark-grey-2:#999;
+$color-dark-grey-3:#333;
 $color-light-grey-1:#f7f7f7;
 $color-light-grey-2:#eee;
 $color-black:#000;
