--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,9 +3,11 @@ body{
     font-weight: 400;
     line-height: 1.7;
     color: $color-dark-grey;
-    padding: 3rem;
-  }
+    backface-visibility: hidden;
+    // padding: 3rem;
+}
 .heading-primary{
+backface-visibility: hidden;
 color: $color-white;
 margin-bottom: 6rem;
 text-transform: uppercase;
