--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,3 +30,32 @@
     position: relative;
     backface-visibility: hidden;
 }
+
+
+/* HOME - SECTION BOOK */
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(
+      to right bottom,
+      $color-primary-light,
+      $color-primary-dark
+    );
+}
+  
+.book {
+    background-image:  linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 50%,
+        transparent 50%
+      ),
+    url('../../img/nat-10.jpg');
+    background-size: 100%;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+    height: 49rem;
+    &__form{
+        padding: 6rem;
+        width: 50%;
+    }
+}  
