--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -21,4 +21,5 @@ $default-font-size:1.6rem;
 // grids
 $grid-width:100rem;
 $vertical-space:8rem;
+$responsive-vertical-space:6rem;
 $horizontal-space:6rem;
