--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body{
     line-height: 1.7;
     color: $color-dark-grey;
     backface-visibility: hidden;
-    // padding: 3rem;
 }
 .heading-primary{
 backface-visibility: hidden;
@@ -14,9 +13,13 @@ text-transform: uppercase;
 &--main{
     display: block;
     font-size: 6rem;
-    font-weight: 600;
+    font-weight: 700;
     letter-spacing: 3.5rem;
     animation: moveInLeft 1s ease-out;
+    @include responsive(phone){
+        font-size: 5rem;
+        letter-spacing: 2rem;
+    }
 }
 &--sub{
     display: block;
@@ -24,7 +27,10 @@ text-transform: uppercase;
     font-weight: 400;
     letter-spacing: 1.5rem;
     animation: moveInRight 1s ease-out;
-
+    @include responsive(phone){
+        font-size: 1.5rem;
+        letter-spacing: .5rem;
+    }
 }
 }
 
@@ -39,6 +45,12 @@ text-transform: uppercase;
     background-clip: text;
     -webkit-background-clip: text;
     transition: all .2s;
+    @include responsive(tablet){
+        font-size: 3rem;
+    }
+    @include responsive(phone){
+        font-size: 2.5rem;
+    }
     &:hover{
         transform:skewY(2deg) skewX(15deg)  scale(1.1);
         text-shadow: .5rem 1.5rem 2rem rgba($color-black, .2);
