--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,6 +3,9 @@
     padding: 10rem 0;
     font-size: 1.4rem;
     color: $color-light-grey-1;
+    @include responsive(tablet){
+      padding: 8rem 0;
+    }
   
     &__logo-box {
       text-align: center;
@@ -18,6 +21,10 @@
       border-top: 1px solid $color-light-grey-2;
       padding-top: 2rem;
       display: inline-block;
+      @include responsive(tablet){
+        width: 100%;
+        text-align: center;
+      }
     }
   
     &__item {
@@ -51,6 +58,10 @@
       padding-top: 2rem;
       width: 80%;
       float: right;
+      @include responsive(tablet){
+        width: 100%;
+        float:none;
+      }
   
     }
 }
