--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,6 +11,10 @@
     -webkit-clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     backface-visibility: hidden;
+    @include responsive(phone){
+      -webkit-clip-path:polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
     &__logo-box{
       position: absolute;
       top: 4rem;
