--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,6 +14,14 @@
         box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
         text-align: center;
         cursor: pointer;
+        @include responsive(tablet){
+            top: 4rem;
+            right: 4rem;
+        }
+        @include responsive(phone){
+            top: 3rem;
+            right: 3rem;
+        }
     }
     &__background{
         height: 6rem;
@@ -27,7 +35,15 @@
         $color-primary-dark
         );
         z-index: 1000;
-        transition: transform .8s cubic-bezier(0.23, 1, 0.32, 1);   
+        transition: transform .8s cubic-bezier(0.23, 1, 0.32, 1); 
+        @include responsive(tablet){
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+        @include responsive(phone){
+            top: 3.5rem;
+            right: 3.5rem;
+        }  
     }
     &__nav{
         height: 100vh;
