--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,15 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-small {
   margin-bottom: 1rem !important; }
@@ -232,15 +238,35 @@ body {
     transition: all .3s;
     outline-offset: 2rem;
     z-index: 1; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        float: left;
+        position: relative;
+        width: 33.33333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition__photo--p1 {
       top: -2rem;
       left: 0; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p1 {
+          top: 0;
+          transform: scale(1.2); } }
     .composition__photo--p2 {
       top: 2rem;
       right: 0; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p2 {
+          top: -1rem;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo--p3 {
       top: 10rem;
       left: 20%; }
+      @media (max-width: 56.25em) {
+        .composition__photo--p3 {
+          top: 1rem;
+          transform: scale(1.2);
+          left: 0; } }
     .composition__photo:hover {
       outline: 1.5rem solid #55c57a;
       transform: scale(1.1) translateY(-0.5rem);
@@ -259,6 +285,9 @@ body {
   cursor: pointer;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem; } }
   .feature-box__icon {
     font-size: 5rem;
     background-image: linear-gradient(to right, #7ed56f, #28b485);
@@ -267,6 +296,9 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
     margin-bottom: .5rem; }
+    @media (max-width: 56.25em) {
+      .feature-box__icon {
+        padding: 0; } }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.1); }
 
@@ -365,6 +397,42 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      cursor: pointer;
+      background-color: #fff;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card__side {
+        position: relative;
+        border-radius: .3rem;
+        height: auto;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0);
+          -webkit-clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card__details {
+        padding: 1rem 3rem; }
+      .card__cta {
+        position: relative;
+        top: 0;
+        left: 0;
+        transform: translate(0);
+        text-align: center;
+        width: 100%;
+        padding: 7rem 4rem 4rem 4rem; }
+      .card__price-box {
+        color: #fff;
+        text-align: center;
+        margin-bottom: 4rem; }
+      .card__price-title {
+        text-transform: uppercase; }
+      .card__price-value {
+        font-size: 4rem;
+        font-weight: 100; } }
 
 .story {
   width: 75%;
@@ -376,6 +444,15 @@ body {
   font-size: 1.6rem;
   transform: skewX(-12deg);
   backface-visibility: hidden; }
+  @media (max-width: 56.25em) {
+    .story {
+      width: 100%;
+      padding-left: 7rem;
+      padding: 4rem;
+      transform: skewX(0); } }
+  @media (max-width: 37.5em) {
+    .story {
+      transform: skewX(0); } }
   .story__shape {
     position: relative;
     float: left;
@@ -383,10 +460,16 @@ body {
     width: 15rem;
     -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 40%);
+    clip-path: circle(50% at 50% 40%);
     transform: translateX(-3rem) skewX(12.01deg);
     backface-visibility: hidden; }
+    @media (max-width: 56.25em) {
+      .story__shape {
+        transform: translate(0) skewX(0);
+        shape-outside: circle(60% at 60% 50%);
+        -webkit-shape-outside: circle(60% at 60% 50%);
+        -webkit-clip-path: circle(50% at 30% 50%); } }
   .story__img {
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
@@ -395,9 +478,11 @@ body {
   .story__text {
     transform: skewX(12deg);
     backface-visibility: hidden; }
+    @media (max-width: 56.25em) {
+      .story__text {
+        transform: skewX(0); } }
   .story__caption {
     text-transform: uppercase;
-    text-align: center;
     font-size: 1.7rem;
     color: #fff;
     position: absolute;
@@ -407,6 +492,9 @@ body {
     opacity: 0;
     transition: all .5s;
     backface-visibility: hidden; }
+    @media (max-width: 56.25em) {
+      .story__caption {
+        transform: translate(0); } }
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%);
@@ -445,6 +533,9 @@ body {
   display: block;
   color: inherit;
   transition: all 0.3s; }
+  @media (max-width: 56.25em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -470,6 +561,10 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block; }
+  @media (max-width: 56.25em) {
+    .form__radio-group {
+      width: 100%;
+      margin-bottom: 2rem; } }
 
 .form__radio-input {
   display: none; }
@@ -538,11 +633,29 @@ body {
   .popup__left {
     width: 33.33333%;
     display: table-cell; }
+    @media (max-width: 56.25em) {
+      .popup__left {
+        opacity: 0;
+        width: 0; } }
+    @media (max-width: 37.5em) {
+      .popup__left {
+        opacity: 0;
+        width: 0; } }
   .popup__right {
     width: 66.666667%;
     display: table-cell;
     vertical-align: middle;
     padding: 1rem 5rem; }
+    @media (max-width: 56.25em) {
+      .popup__right {
+        width: 100%; }
+        .popup__right a {
+          margin-left: 35%; } }
+    @media (max-width: 37.5em) {
+      .popup__right {
+        width: 100%; }
+        .popup__right a {
+          margin-left: 35%; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 3rem;
@@ -561,6 +674,9 @@ body {
   .popup:target .popup__content {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1); }
+    @media (max-width: 37.5em) {
+      .popup:target .popup__content {
+        width: fit-content; } }
   .popup__close:link, .popup__close:visited {
     color: #777;
     position: absolute;
@@ -605,7 +721,7 @@ body {
   margin: 0 auto; }
   @media (max-width: 56.25em) {
     .row {
-      max-width: 50%;
+      max-width: 50rem;
       padding: 0 3rem; } }
   .row:not(:last-child) {
     margin-bottom: 6rem; }
@@ -819,6 +935,9 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 20rem 0; } }
 
 .section-features {
   padding: 20rem 0;
@@ -828,28 +947,54 @@ body {
   transform: skewY(-8deg); }
   .section-features > * {
     transform: skewY(8deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 10rem 0; } }
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 10rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 10rem 0; } }
 
 .section-stories {
   padding: 15rem 0;
   position: relative;
   backface-visibility: hidden; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
 
 /* HOME - SECTION BOOK */
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+  @media (max-width: 56.25em) {
+    .section-book {
+      padding: 10rem 0; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("../../img/nat-10.jpg");
   background-size: 100%;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-  height: 49rem; }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+  @media (max-width: 75em) {
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 70%, transparent 70%), url("../../img/nat-10.jpg");
+      background-size: cover; } }
+  @media (max-width: 56.25em) {
+    .book {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url("../../img/nat-10.jpg");
+      background-size: cover; } }
   .book__form {
     padding: 6rem;
     width: 50%; }
+    @media (max-width: 75em) {
+      .book__form {
+        padding: 4rem;
+        width: 70%; } }
+    @media (max-width: 56.25em) {
+      .book__form {
+        width: 100%; } }
