--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -118,6 +118,7 @@
             }
         }
     }
+
     &__cta{
         position: absolute;
         top: 50%;
@@ -141,4 +142,51 @@
         font-weight: 100;
     }
 
+    @include responsive(tablet){
+        height: auto;
+        cursor: pointer;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+        &__side{
+            position: relative;
+            border-radius: .3rem;
+            height: auto;
+            box-shadow: none;
+            &--back{
+                transform: rotateY(0);
+                -webkit-clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
+                clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+        
+        &:hover &__side--front{
+            transform: rotateY(0);
+        }
+        &__details{
+        padding: 1rem 3rem;
+        }
+        &__cta{
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            text-align: center;
+            width: 100%;
+            padding: 7rem 4rem 4rem 4rem;
+        }
+        &__price-box{
+            color: $color-white;
+            text-align: center;
+            margin-bottom: 4rem;
+
+        }
+        &__price-title{
+            text-transform: uppercase;
+        }
+        &__price-value{
+            font-size: 4rem;
+            font-weight: 100;
+        }
+
+    }
 }
