--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -8,17 +8,37 @@
         transition: all .3s;
         outline-offset: 2rem;
         z-index:1;
+        @include responsive(tablet) {
+            float: left;
+            position: relative;
+            width: 33.33333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
+          }
         &--p1{
             top: -2rem;
             left: 0;
+            @include responsive(tablet) {
+                top: 0;
+                transform: scale(1.2);
+            }
         }
         &--p2{
             top: 2rem;
             right: 0;
+            @include responsive(tablet) {
+                top: -1rem;
+                transform: scale(1.3);
+                z-index: 100;
+            }
         }
         &--p3{
             top: 10rem;
             left: 20%;
+            @include responsive(tablet) {
+                top: 1rem;
+                transform: scale(1.2);
+                left: 0;
+            }
         }
         &:hover{
             outline: 1.5rem solid $color-primary;
