--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -8,6 +8,9 @@
     cursor: pointer;
     box-shadow: 0 1.5rem 4rem rgba($color-black,  .15);
     transition: transform .3s;
+    @include responsive(tablet) {
+     padding: 2rem;
+    }
     &__icon{
         font-size: 5rem;
         background-image: linear-gradient(
@@ -20,6 +23,10 @@
         background-clip: text;
         -webkit-background-clip: text;
         margin-bottom: .5rem;
+        @include responsive(tablet) {
+            padding: 0;
+           }
+        
     }
     &:hover{
         transform: translateY(-1.5rem) scale(1.1);
