--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -15,7 +15,9 @@
       display: block;
       color: inherit;
       transition: all 0.3s;
-  
+      @include responsive(tablet){
+        width: 100%;
+      }
       &:focus {
           outline: none;
         box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
@@ -46,6 +48,10 @@
     &__radio-group {
       width: 49%;
       display: inline-block;
+      @include responsive(tablet){
+        width: 100%;
+        margin-bottom: 2rem;
+      }
     }
     &__radio-input {
       display: none;
