--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,9 @@
     background-color: $color-light-grey-1;
     padding: 25rem 0;
     margin-top: -20vh;
+    @include responsive(tablet){
+        padding: 20rem 0;
+    }
 }
 
 .section-features{
@@ -17,18 +20,27 @@
     & > *{
         transform: skewY(8deg);
     }
+    @include responsive(tablet){
+        padding: 10rem 0;
+    }
 }
 
 .section-tours{
     background-color: $color-light-grey-1;
-    padding: 25rem 0 10rem 0;
+    padding: 25rem 0 15rem 0;
     margin-top: -10rem;
+    @include responsive(tablet){
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories{
     padding: 15rem 0;
     position: relative;
     backface-visibility: hidden;
+    @include responsive(tablet){
+        padding: 10rem 0;
+    }
 }
 
 
@@ -40,6 +52,9 @@
       $color-primary-light,
       $color-primary-dark
     );
+    @include responsive(tablet){
+        padding: 10rem 0;
+    }
 }
   
 .book {
@@ -53,9 +68,35 @@
     background-size: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
-    height: 49rem;
+    @include responsive(tablet-land){
+        background-image:  linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 70%,
+        transparent 70%
+      ),
+    url('../../img/nat-10.jpg');
+        background-size: cover;
+    }
+    @include responsive(tablet){
+        background-image:  linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%,
+      ),
+    url('../../img/nat-10.jpg');
+        background-size: cover;
+        
+    }
     &__form{
         padding: 6rem;
         width: 50%;
+        @include responsive(tablet-land){
+            padding: 4rem;
+            width: 70%;
+        }
+        @include responsive(tablet){
+            width: 100%;
+        }
     }
 }  
