--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -33,4 +33,7 @@
     box-sizing: border-box;
     // padding: 3rem;
   }
-  
+::selection{
+  background-color: $color-primary;
+  color: $color-white;
+}
