--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -13,6 +13,7 @@
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         height: 52rem;
         width: 100%;
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         transition: all .8s;
         &--front{
@@ -142,7 +143,9 @@
         font-weight: 100;
     }
 
-    @include responsive(tablet){
+    // @include responsive(tablet){
+    @media only screen and (max-width:56.25em),
+        only screen and (hover:none){
         height: auto;
         cursor: pointer;
         background-color: $color-white;
