--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -8,8 +8,12 @@
     z-index: 9999;
     opacity: 0;
     visibility: hidden;
-    // transform: translate(-50%, -50%) scale(.5);
-    transition: all .3s ;
+    transition: all .3s;
+    @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)){
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, 0.3);
+    }
     
     &__content{
         @include absCenter;
