--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -121,10 +121,11 @@
     }
 
     &__cta{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include absCenter;
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
         text-align: center;
         width: 90%;
     }
