--- a/3-Nexter/sass/_typography.scss
+++ b/3-Nexter/sass/_typography.scss
@@ -4,6 +4,10 @@
 }
 .heading-1{
     @extend %heading;
+    font-size: 4.5rem;
+    line-height:1;
+    color: $color-grey-light-1;
+    text-transform: capitalize;
 }
 .heading-2{
     @extend %heading;
