media qeuries and production build process - Nexter Project end

--- a/3-Nexter/sass/_features.scss
+++ b/3-Nexter/sass/_features.scss
@@ -1,14 +1,26 @@
 .features{
     grid-column: center-start / center-end;
     margin: 15rem 0;
-    display: grid;
-    // grid-template-columns: repeat(3, 1fr); // un-responsive
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap: 30px;
-    align-items: start;
+
+    @supports(display: grid){
+        display: grid;
+        // grid-template-columns: repeat(3, 1fr); // un-responsive
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+        gap: 30px;
+        align-items: start;
+    }
+    
 }
 
 .feature {
+    float: left;
+    width: 33.3333%;
+    margin-bottom: 6rem;
+
+    @supports(display: grid){
+        width: auto;
+        margin-bottom: 0;
+    }
 
     display: grid;
     grid-template-columns: min-content 1fr;
