--- a/3-Nexter/sass/_base.scss
+++ b/3-Nexter/sass/_base.scss
@@ -14,6 +14,12 @@ $color-grey-dark-2: #6D5D4B;
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
+// Responsive break-points VARIABLES
+$bp-largest: 75em; //1200px
+$bp-large: 62.5em; //1000px
+$bp-medium: 50em; //800px
+$bp-small: 37.5em; //600px
+
 *,
 *::before,
 *::after{
@@ -25,6 +31,9 @@ $font-display: 'Josefin Sans', sans-serif;
 html{
     box-sizing: inherit;
     font-size: 62.5%; // 16px/10px = 62.5%, so 1rem = 10px
+    @media only screen and(max-width:$bp-largest){
+        font-size: 50%; //1rem = 8px
+    }
 }
 
 body{
@@ -41,4 +50,15 @@ body{
     grid-template-columns: [sidebar-start] 8rem [sidebar-end grid-start] minmax(6rem, 1fr)    
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] 
     minmax(6rem, 1fr) [grid-end];    
+
+    @media only screen and(max-width:$bp-large){
+        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+        grid-template-columns: [grid-start] minmax(6rem, 1fr)    
+        [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] 
+        minmax(6rem, 1fr) [grid-end];  
+    }
+
+    @media only screen and(max-width:$bp-medium){
+        grid-template-rows: 6rem calc(100vh - 6rem);
+    }
 }
